Header Area HTML code added

--- a/index.html
+++ b/index.html
@@ -1,130 +1,167 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Welcome || EduLab</title>
 
     <!-- Reset CSS link -->
-     <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/reset.css" />
 
-     <!-- FontAwesome CSS link -->
-     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- FontAwesome CSS link -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css"
+      integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
 
-     <!-- Custom CSS link -->
-     <link rel="stylesheet" href="./css/styles.css">
+    <!-- Custom CSS link -->
+    <link rel="stylesheet" href="./css/styles.css" />
 
-     <!-- Responsive CSS link -->
-     <link rel="stylesheet" href="./css/responsive.css">
-</head>
-<body>
-  
+    <!-- Responsive CSS link -->
+    <link rel="stylesheet" href="./css/responsive.css" />
+  </head>
+  <body>
     <!-- Header Area Start -->
-     
-<header class="header_area">
 
-</header>
+    <header class="header_area">
+      <div class="container">
+        <div class="header_content">
 
-  <!-- Header Area End -->
+          <div class="logo">
+            <a href="index.html">
+              <img src="./images/logo.png" alt="EduLab Logo" />
+            </a>
+          </div> <!--/logo-->
 
-  <!-- Hero Section Start -->
+          <div class="main_menu">
+            <nav>
+                <ul>
+                    <li><a href="">Instractor</a></li>
+                    <li><a href="">Pricing</a></li>
+                    <li><a href="">FAQ</a></li>
+                </ul>
+            </nav>
+          </div> <!--/main_menu-->
 
-<section class="hero_area">
-    <div class="container"></div> <!--/container-->
-</section>
+          <div class="sign_up_btn">
+            <a href="#" class="btn">Sign Up</a>
+          </div>
+        </div>
+      </div>
+      <!--/container-->
+    </header>
 
-  <!-- Hero Section End -->
+    <!-- Header Area End -->
 
-  <!-- Service Area Start -->
+    <!-- Hero Section Start -->
 
-<section class="service_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <section class="hero_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-  <!-- Service Area End -->
+    <!-- Hero Section End -->
 
-  <!-- featured_lessons Area Start -->
+    <!-- Service Area Start -->
 
-<section class="featured_lessons_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <section class="service_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-  <!-- featured_lessons Area End -->
+    <!-- Service Area End -->
 
-  <!-- career_area Start -->
+    <!-- featured_lessons Area Start -->
 
-<section class="career_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <section class="featured_lessons_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-  <!-- career_area End -->
+    <!-- featured_lessons Area End -->
 
-  <!-- category_top_area Start -->
+    <!-- career_area Start -->
 
-<section class="category_top_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <section class="career_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-  <!-- category_top_area End -->
+    <!-- career_area End -->
 
-  <!-- main_category_area Start -->
+    <!-- category_top_area Start -->
 
-<section class="main_category_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <section class="category_top_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-  <!-- main_category_area End -->
+    <!-- category_top_area End -->
 
-  <!-- testimonial_area Start -->
+    <!-- main_category_area Start -->
 
-<section class="testimonial_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <section class="main_category_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-  <!-- testimonial_area End -->
+    <!-- main_category_area End -->
 
+    <!-- testimonial_area Start -->
 
-  <!-- our_feature_area Start -->
+    <section class="testimonial_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-<section class="our_feature_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <!-- testimonial_area End -->
 
-  <!-- our_feature_area End -->
+    <!-- our_feature_area Start -->
 
-  <!-- our_user_area Start -->
+    <section class="our_feature_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-<section class="our_user_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <!-- our_feature_area End -->
 
-  <!-- our_user_area End -->
+    <!-- our_user_area Start -->
 
-  <!-- our_user_area Start -->
+    <section class="our_user_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-<section class="our_user_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <!-- our_user_area End -->
 
-  <!-- our_user_area End -->
+    <!-- our_user_area Start -->
 
-  <!-- get_started_area Start -->
+    <section class="our_user_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-<section class="get_started_area">
-    <div class="container"></div> <!--/container-->
-</section>
+    <!-- our_user_area End -->
 
-  <!-- get_started_area End -->
+    <!-- get_started_area Start -->
 
-  <!-- footer_area Start -->
+    <section class="get_started_area">
+      <div class="container"></div>
+      <!--/container-->
+    </section>
 
-<footer class="footer_area">
-    <div class="container"></div> <!--/container-->
-</footer>
+    <!-- get_started_area End -->
 
-  <!-- footer_area End -->
+    <!-- footer_area Start -->
 
+    <footer class="footer_area">
+      <div class="container"></div>
+      <!--/container-->
+    </footer>
 
-
-</body>
+    <!-- footer_area End -->
+  </body>
 </html>
