Hero Area CSS added

--- a/index.html
+++ b/index.html
@@ -29,22 +29,23 @@
     <header class="header_area">
       <div class="container">
         <div class="header_content">
-
           <div class="logo">
             <a href="index.html">
               <img src="./images/logo.png" alt="EduLab Logo" />
             </a>
-          </div> <!--/logo-->
+          </div>
+          <!--/logo-->
 
           <div class="main_menu">
             <nav>
-                <ul>
-                    <li><a href="">Instractor</a></li>
-                    <li><a href="">Pricing</a></li>
-                    <li><a href="">FAQ</a></li>
-                </ul>
+              <ul>
+                <li><a href="">Instractor</a></li>
+                <li><a href="">Pricing</a></li>
+                <li><a href="">FAQ</a></li>
+              </ul>
             </nav>
-          </div> <!--/main_menu-->
+          </div>
+          <!--/main_menu-->
 
           <div class="sign_up_btn">
             <a href="#" class="btn">Sign Up</a>
@@ -59,7 +60,32 @@
     <!-- Hero Section Start -->
 
     <section class="hero_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="hero_content">
+          <div class="hero_heading">
+            <h1>transform your life throung education</h1>
+            <p>
+              Courses start at $13.99. Get your new-student offer before it
+              expires.
+            </p>
+            <div class="hero_btns">
+              <a href="#" class="btn">get started</a>
+              <a href="#" class="btn">learn more</a>
+            </div>
+          </div>
+          <!--/hero_heading-->
+          <div class="hero_img">
+            <picture>
+              <img src="./images/hero_img_1.png" alt="img">
+            </picture>
+            <picture>
+              <img src="./images/hero_img_2.png" alt="img">
+            </picture>
+          </div>
+          <!--/hero_img-->
+        </div>
+        <!--/hero_content-->
+      </div>
       <!--/container-->
     </section>
 
