Hero Area done!

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
           <!--/hero_heading-->
           <div class="hero_img">
             <picture>
-              <img src="./images/hero_img_1.png" alt="img">
+              <img src="./images/hero_img_1.png" alt="img" />
             </picture>
             <picture>
-              <img src="./images/hero_img_2.png" alt="img">
+              <img src="./images/hero_img_2.png" alt="img" />
             </picture>
           </div>
           <!--/hero_img-->
@@ -94,7 +94,8 @@
     <!-- Service Area Start -->
 
     <section class="service_area">
-      <div class="container"></div>
+      <div class="container">
+      </div>
       <!--/container-->
     </section>
 
