Our Service Area HTML Added

--- a/index.html
+++ b/index.html
@@ -95,6 +95,47 @@
 
     <section class="service_area">
       <div class="container">
+        <div class="service_content">
+          <div class="single_service">
+            <div class="service_icon">
+              <i class="fa-regular fa-user"></i>
+            </div>
+            <div class="content">
+              <h4>Expert Instrator</h4>
+              <p>
+                Leverage agile frameworks to provide a robust synopsis for high
+                level overviews.
+              </p>
+            </div>
+          </div>
+          <!--/single_service-->
+          <div class="single_service">
+            <div class="service_icon">
+              <i class="fa-regular fa-clock"></i>
+            </div>
+            <div class="content">
+              <h4>Lifetime Access</h4>
+              <p>
+                Bring to the table win-win survival strategy to ensure proactive
+                domination now.
+              </p>
+            </div>
+          </div>
+          <!--/single_service-->
+          <div class="single_service">
+            <div class="service_icon">
+              <i class="fa-solid fa-dollar-sign"></i>
+            </div>
+            <div class="content">
+              <h4>Money Back Grantee</h4>
+              <p>
+                Completely synergize resource taxing relationships via premier
+                niche markets building things.
+              </p>
+            </div>
+          </div>
+          <!--/single_service-->
+        </div>
       </div>
       <!--/container-->
     </section>
