Our Service area done

--- a/index.html
+++ b/index.html
@@ -97,9 +97,9 @@
       <div class="container">
         <div class="service_content">
           <div class="single_service">
-            <div class="service_icon">
-              <i class="fa-regular fa-user"></i>
-            </div>
+            <picture class="service_icon">
+             <img src="./images/service_user_icon.png" alt="service">
+            </picture>
             <div class="content">
               <h4>Expert Instrator</h4>
               <p>
@@ -110,9 +110,9 @@
           </div>
           <!--/single_service-->
           <div class="single_service">
-            <div class="service_icon">
-              <i class="fa-regular fa-clock"></i>
-            </div>
+            <picture class="service_icon">
+              <img src="./images/service_clock_icon.png" alt="Service">
+            </picture>
             <div class="content">
               <h4>Lifetime Access</h4>
               <p>
@@ -124,7 +124,7 @@
           <!--/single_service-->
           <div class="single_service">
             <div class="service_icon">
-              <i class="fa-solid fa-dollar-sign"></i>
+              <img src="./images/service_dolar_icon.png" alt="Service">
             </div>
             <div class="content">
               <h4>Money Back Grantee</h4>
