Featured Area HTML added

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         <div class="service_content">
           <div class="single_service">
             <picture class="service_icon">
-             <img src="./images/service_user_icon.png" alt="service">
+              <img src="./images/service_user_icon.png" alt="service" />
             </picture>
             <div class="content">
               <h4>Expert Instrator</h4>
@@ -111,7 +111,7 @@
           <!--/single_service-->
           <div class="single_service">
             <picture class="service_icon">
-              <img src="./images/service_clock_icon.png" alt="Service">
+              <img src="./images/service_clock_icon.png" alt="Service" />
             </picture>
             <div class="content">
               <h4>Lifetime Access</h4>
@@ -124,7 +124,7 @@
           <!--/single_service-->
           <div class="single_service">
             <div class="service_icon">
-              <img src="./images/service_dolar_icon.png" alt="Service">
+              <img src="./images/service_dolar_icon.png" alt="Service" />
             </div>
             <div class="content">
               <h4>Money Back Grantee</h4>
@@ -145,7 +145,63 @@
     <!-- featured_lessons Area Start -->
 
     <section class="featured_lessons_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="featured_lessons_content">
+          <div class="featured_heading">
+            <h2>Featured Lessons</h2>
+          </div>
+          <div class="featured_lessons_slider">
+            <div class="item">
+              <div class="slider_content">
+                <picture>
+                  <img src="./images/featured_1.png" alt="featured" />
+                </picture>
+                <div class="slider_text">
+                  <h5>Lesson 01</h5>
+                  <h3>Color theory 101 : Learn how to use brand colors</h3>
+                  <div class="lesson_count_and_time">
+                    <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
+                    <p><i class="fa-solid fa-clock"></i> 3h 20min</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--/item-->
+            <div class="item">
+              <div class="slider_content">
+                <picture>
+                  <img src="./images/featured_2.png" alt="featured" />
+                </picture>
+                <div class="slider_text">
+                  <h5>Lesson 02</h5>
+                  <h3>Affordances: Designing Intuitive User Interfaces</h3>
+                  <div class="lesson_count_and_time">
+                    <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
+                    <p><i class="fa-solid fa-clock"></i> 3h 20min</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--/item-->
+            <div class="item">
+              <div class="slider_content">
+                <picture>
+                  <img src="./images/featured_3.png" alt="featured" />
+                </picture>
+                <div class="slider_text">
+                  <h5>Lesson 03</h5>
+                  <h3>How to Create a UX Portfolio without any project</h3>
+                  <div class="lesson_count_and_time">
+                    <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
+                    <p><i class="fa-solid fa-clock"></i> 3h 20min</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!--/item-->
+          </div>
+        </div>
+      </div>
       <!--/container-->
     </section>
 
