Featured Area done!

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   <img src="./images/featured_1.png" alt="featured" />
                 </picture>
                 <div class="slider_text">
-                  <h5>Lesson 01</h5>
+                  <h5 style="--color:#416FF4">Lesson 01</h5>
                   <h3>Color theory 101 : Learn how to use brand colors</h3>
                   <div class="lesson_count_and_time">
                     <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
@@ -173,7 +173,7 @@
                   <img src="./images/featured_2.png" alt="featured" />
                 </picture>
                 <div class="slider_text">
-                  <h5>Lesson 02</h5>
+                  <h5 style="--color:#2BD67B">Lesson 02</h5>
                   <h3>Affordances: Designing Intuitive User Interfaces</h3>
                   <div class="lesson_count_and_time">
                     <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
@@ -189,7 +189,7 @@
                   <img src="./images/featured_3.png" alt="featured" />
                 </picture>
                 <div class="slider_text">
-                  <h5>Lesson 03</h5>
+                  <h5 style="--color:#F7B26D">Lesson 03</h5>
                   <h3>How to Create a UX Portfolio without any project</h3>
                   <div class="lesson_count_and_time">
                     <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
@@ -199,6 +199,9 @@
               </div>
             </div>
             <!--/item-->
+          </div>
+          <div class="explore_all_btn">
+            <a href="#" class="btn">Explore All Lessons</a>
           </div>
         </div>
       </div>
