Career Area HTML Added

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
                   <img src="./images/featured_1.png" alt="featured" />
                 </picture>
                 <div class="slider_text">
-                  <h5 style="--color:#416FF4">Lesson 01</h5>
+                  <h5 style="--color: #416ff4">Lesson 01</h5>
                   <h3>Color theory 101 : Learn how to use brand colors</h3>
                   <div class="lesson_count_and_time">
                     <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
@@ -173,7 +173,7 @@
                   <img src="./images/featured_2.png" alt="featured" />
                 </picture>
                 <div class="slider_text">
-                  <h5 style="--color:#2BD67B">Lesson 02</h5>
+                  <h5 style="--color: #2bd67b">Lesson 02</h5>
                   <h3>Affordances: Designing Intuitive User Interfaces</h3>
                   <div class="lesson_count_and_time">
                     <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
@@ -189,7 +189,7 @@
                   <img src="./images/featured_3.png" alt="featured" />
                 </picture>
                 <div class="slider_text">
-                  <h5 style="--color:#F7B26D">Lesson 03</h5>
+                  <h5 style="--color: #f7b26d">Lesson 03</h5>
                   <h3>How to Create a UX Portfolio without any project</h3>
                   <div class="lesson_count_and_time">
                     <p><i class="fa-solid fa-book-open"></i> 13 Lectures</p>
@@ -213,7 +213,47 @@
     <!-- career_area Start -->
 
     <section class="career_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="career_content">
+          <div class="career_img">
+            <picture>
+              <img src="./images/career_img.png" alt="Career" />
+            </picture>
+          </div>
+          <div class="career_text">
+            <h3>Expand your career opportunities with Python</h3>
+            <p>
+              Completely synergize resource taxing relationships via premier
+              niche markets.
+            </p>
+            <div class="career_list">
+              <ul>
+                <li>
+                  <div class="icon">
+                    <i class="fa-solid fa-briefcase"></i>
+                  </div>
+                  <div class="icon_tex">
+                    <h4>100% Moneyback Grantee </h4>
+                    <p>Efficiently unleash cross-media information without cross-media value.</p>
+                  </div>
+                </li>
+                <li>
+                  <div class="icon">
+                    <i class="fa-solid fa-briefcase"></i>
+                  </div>
+                  <div class="icon_tex">
+                    <h4>World-class Education</h4>
+                    <p>Podcasting operational change management inside of workflows to establish.</p>
+                  </div>
+                </li>
+              </ul>
+            </div>
+            <div class="career_btn">
+              <a href="#" class="btn">Get Started</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <!--/container-->
     </section>
 
