Career Area css done

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                 </li>
                 <li>
                   <div class="icon">
-                    <i class="fa-solid fa-briefcase"></i>
+                    <i class="fa-solid fa-globe"></i>
                   </div>
                   <div class="icon_tex">
                     <h4>World-class Education</h4>
