Cat top area html added

--- a/index.html
+++ b/index.html
@@ -262,7 +262,17 @@
     <!-- category_top_area Start -->
 
     <section class="category_top_area">
-      <div class="container"></div>
+      <div class="container">
+<div class="cat_top_content">
+  <h2>Featured topics by category</h2>
+  <p>Get unlimited access to 6,000+ of Udemy’s top courses for your team. Learn and improve skills across business, tech, design, and more.</p>
+  <div class="hero_btns">
+    <a href="#" class="btn">get started</a>
+    <a href="#" class="btn">Contact</a>
+  </div>
+</div>
+
+      </div>
       <!--/container-->
     </section>
 
