Main Category Area html added

--- a/index.html
+++ b/index.html
@@ -233,8 +233,11 @@
                     <i class="fa-solid fa-briefcase"></i>
                   </div>
                   <div class="icon_tex">
-                    <h4>100% Moneyback Grantee </h4>
-                    <p>Efficiently unleash cross-media information without cross-media value.</p>
+                    <h4>100% Moneyback Grantee</h4>
+                    <p>
+                      Efficiently unleash cross-media information without
+                      cross-media value.
+                    </p>
                   </div>
                 </li>
                 <li>
@@ -243,7 +246,10 @@
                   </div>
                   <div class="icon_tex">
                     <h4>World-class Education</h4>
-                    <p>Podcasting operational change management inside of workflows to establish.</p>
+                    <p>
+                      Podcasting operational change management inside of
+                      workflows to establish.
+                    </p>
                   </div>
                 </li>
               </ul>
@@ -263,15 +269,17 @@
 
     <section class="category_top_area">
       <div class="container">
-<div class="cat_top_content">
-  <h2>Featured topics by category</h2>
-  <p>Get unlimited access to 6,000+ of Udemy’s top courses for your team. Learn and improve skills across business, tech, design, and more.</p>
-  <div class="hero_btns">
-    <a href="#" class="btn">get started</a>
-    <a href="#" class="btn">Contact</a>
-  </div>
-</div>
-
+        <div class="cat_top_content">
+          <h2>Featured topics by category</h2>
+          <p>
+            Get unlimited access to 6,000+ of Udemy’s top courses for your team.
+            Learn and improve skills across business, tech, design, and more.
+          </p>
+          <div class="hero_btns">
+            <a href="#" class="btn">get started</a>
+            <a href="#" class="btn">Contact</a>
+          </div>
+        </div>
       </div>
       <!--/container-->
     </section>
@@ -281,7 +289,186 @@
     <!-- main_category_area Start -->
 
     <section class="main_category_area">
-      <div class="container"></div>
+      <div class="container">
+        <div class="category_content">
+          <div class="heading_area">
+            <div class="heading_left">
+              <h4>Our big library</h4>
+              <h3>Top categories</h3>
+              <p>
+                Though the gravity still dragged at him, his muscles were making
+                great efforts to adjust. After the daily classes he no longer
+                collapsed.
+              </p>
+            </div>
+            <div class="search_area">
+              <input
+                type="search"
+                class="search_area"
+                placeholder="Search..."
+              />
+              <a href="#" class="btn"
+                ><i class="fa-solid fa-magnifying-glass"></i
+              ></a>
+            </div>
+          </div>
+          <div class="all_category">
+            <div class="single_category">
+              <picture>
+                <img src="./images/cat_1.png" alt="Category">
+              </picture>
+              <div class="cat_name">
+                <h3>System Administration and IT Infrastructure</h3>
+              </div>
+              <div class="count">
+                <p><i class="fa-solid fa-user"></i> 42 user</p>
+                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
+              </div>
+              <div class="user_area">
+                <picture>
+                  <img src="./images/user.png" alt="User">
+                </picture>
+                <div class="name">
+                  <h3>Afonso Pinto</h3>
+                  <p>Designer</p>
+                </div>
+              </div>
+              <div class="price">
+                <p>$19</p> 
+                <a href="#">Get Started</a>
+              </div>
+            </div> <!--/single category-->
+            <div class="single_category">
+              <picture>
+                <img src="./images/cat_2.png" alt="Category">
+              </picture>
+              <div class="cat_name">
+                <h3>System Administration and IT Infrastructure</h3>
+              </div>
+              <div class="count">
+                <p><i class="fa-solid fa-user"></i> 42 user</p>
+                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
+              </div>
+              <div class="user_area">
+                <picture>
+                  <img src="./images/user.png" alt="User">
+                </picture>
+                <div class="name">
+                  <h3>Afonso Pinto</h3>
+                  <p>Designer</p>
+                </div>
+              </div>
+              <div class="price">
+                <p>$19</p> 
+                <a href="#">Get Started</a>
+              </div>
+            </div> <!--/single category-->
+            <div class="single_category">
+              <picture>
+                <img src="./images/cat_3.png" alt="Category">
+              </picture>
+              <div class="cat_name">
+                <h3>System Administration and IT Infrastructure</h3>
+              </div>
+              <div class="count">
+                <p><i class="fa-solid fa-user"></i> 42 user</p>
+                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
+              </div>
+              <div class="user_area">
+                <picture>
+                  <img src="./images/user.png" alt="User">
+                </picture>
+                <div class="name">
+                  <h3>Afonso Pinto</h3>
+                  <p>Designer</p>
+                </div>
+              </div>
+              <div class="price">
+                <p>$19</p> 
+                <a href="#">Get Started</a>
+              </div>
+            </div> <!--/single category-->
+            <div class="single_category">
+              <picture>
+                <img src="./images/cat_4.png" alt="Category">
+              </picture>
+              <div class="cat_name">
+                <h3>System Administration and IT Infrastructure</h3>
+              </div>
+              <div class="count">
+                <p><i class="fa-solid fa-user"></i> 42 user</p>
+                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
+              </div>
+              <div class="user_area">
+                <picture>
+                  <img src="./images/user.png" alt="User">
+                </picture>
+                <div class="name">
+                  <h3>Afonso Pinto</h3>
+                  <p>Designer</p>
+                </div>
+              </div>
+              <div class="price">
+                <p>$19</p> 
+                <a href="#">Get Started</a>
+              </div>
+            </div> <!--/single category-->
+            <div class="single_category">
+              <picture>
+                <img src="./images/cat_5.png" alt="Category">
+              </picture>
+              <div class="cat_name">
+                <h3>System Administration and IT Infrastructure</h3>
+              </div>
+              <div class="count">
+                <p><i class="fa-solid fa-user"></i> 42 user</p>
+                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
+              </div>
+              <div class="user_area">
+                <picture>
+                  <img src="./images/user.png" alt="User">
+                </picture>
+                <div class="name">
+                  <h3>Afonso Pinto</h3>
+                  <p>Designer</p>
+                </div>
+              </div>
+              <div class="price">
+                <p>$19</p> 
+                <a href="#">Get Started</a>
+              </div>
+            </div> <!--/single category-->
+            <div class="single_category">
+              <picture>
+                <img src="./images/cat_6.png" alt="Category">
+              </picture>
+              <div class="cat_name">
+                <h3>System Administration and IT Infrastructure</h3>
+              </div>
+              <div class="count">
+                <p><i class="fa-solid fa-user"></i> 42 user</p>
+                <p><i class="fa-solid fa-stopwatch"></i> 100 min</p>
+              </div>
+              <div class="user_area">
+                <picture>
+                  <img src="./images/user.png" alt="User">
+                </picture>
+                <div class="name">
+                  <h3>Afonso Pinto</h3>
+                  <p>Designer</p>
+                </div>
+              </div>
+              <div class="price">
+                <p>$19</p> 
+                <a href="#">Get Started</a>
+              </div>
+            </div> <!--/single category-->
+          </div>
+        </div>
+        <div class="explore_all_btn">
+          <a href="#" class="btn">Explore All</a>
+        </div>
+      </div>
       <!--/container-->
     </section>
 
